09/27/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.4.5 'Marshal West':
	- Mobile sessions authentication improved.
	- Authentication code cleaning.
	- Quota allocation fixed.
	- Core dump fixed.
	- Memory code cleaning.
	- Logging code cleaning.
	- TCP/TLS tests improved.
	
09/05/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.4.4 'Marshal West':
	- TLS renegotiation DoS attack prevention implemented (Issue 136);
	- FQDN is allowed as a relay-ip or a listener-ip parameter
	(patch provided by Iñaki Baz Castillo).
	
09/01/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.4.3 'Marshal West':
	- Redis DB user key database operation fixed.
	- SHA-256 memory leak fixed.
	- Mobility ticket retransmission fixed.
	
08/14/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.4.2 'Marshal West':
	- MySQL SSL connection support.
	- Crash fixed when incorrect DB connection string.
	- Minor docs fixes.
	
07/29/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.4.1 'Marshal West':
	- Server-side forceful session cancellation implemented
	(in telnet console).
	
07/18/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.96 'Marshal West':
	- TCP 6062 relay connection fix.
	- "pu" CLI command fixed.
	- Some crash conditions fixed.
	
07/11/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.95 'Marshal West':
	- working on compilation warnings.
	- Allocation mismatch condition fixed.
	- STUN BINDING response fixed in the case of -X (external address) option.
	
06/13/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.94 'Marshal West':
	- Redis DB connection status fixed (Issue 129).
	- SIGHUP for logfile reset implemented
	(Gustavo Garcia suggestion).
	- log reset command in CLI added.
	- Some error code corrections:
	    * "Mobility forbidden" error changed, to value 405.
	    * "Wrong credentials" situation is now treated as error 441.

06/03/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.92 'Marshal West':